--- a/CUS1166_Project_Template-master/app/templates/menu.html
+++ b/CUS1166_Project_Template-master/app/templates/menu.html
@@ -4,6 +4,14 @@
   <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
 </li>
 <li class="nav-item">
-  <a class="nav-link" href="{{url_for('main.appointment')}}">Sample Use Case</a>
+  <a class="nav-link" href="{{url_for('main.todolist')}}">Sample Use Case</a>
 </li>
+<li class="nav-item">
+  <a class="nav-link" href="{{url_for('main.Schedule')}}">Schedule</a>
+</li>
+<li class="nav-item">
+  <a class="nav-link" href="{{url_for('main.view_schedule')}}"> Display appointments</a>
+</li>
+
 {%  endblock %}
+
