--- a/CUS1166_Project_Template-master/app/templates/menu.html
+++ b/CUS1166_Project_Template-master/app/templates/menu.html
@@ -7,7 +7,7 @@
   <a class="nav-link" href="{{url_for('main.todolist')}}">Sample Use Case</a>
 </li>
 <li class="nav-item">
-  <a class="nav-link" href="{{url_for('main.Schedule')}}">Schedule</a>
+  <a class="nav-link" href="{{url_for('main.Schedule')}}">New appointments</a>
 </li>
 <li class="nav-item">
   <a class="nav-link" href="{{url_for('main.view_schedule')}}"> Display appointments</a>
